--- a/Week 3 - Forms, Fonts, Colors, & Bootstrap/Conference Form/Conference Registration.html
+++ b/Week 3 - Forms, Fonts, Colors, & Bootstrap/Conference Form/Conference Registration.html
@@ -4,44 +4,52 @@
   <meta charset="UTF-8">
   <title>Registration</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Start Form -->
+
 <div>
+  <img src="MidJourney_ramen_festival_2023.png" width="200" class="mx-5" >
+</div>
+<div class="mx-5">
   <form>
     <!--  Start Contact / Personal Info  -->
     <div class="contact form-group">
       <label class="form-text" for="name">
-        Name <input class="form-text" id="name" required>
+        Name <input name="name" maxlength="70" class="form-text" id="name" required>
       </label>
       <label class="form-text" for="password">
-        Password <input class="form-control" id="password" required>
+        Password <input name="password" type="password" class="form-control" id="password" required>
       </label>
       <label class="form-text" for="email">
-        Email <input type="email" class="form-control" id="email" required>
+        Email <input name="email" type="email" class="form-control" id="email" required>
       </label>
       <label class="form-text" for="birth date">
-        Birth Date <input type="date" class="form-control" id="birth date" required>
+        Birth Date <input name="birth date" type="date" class="form-control date" id="birth date" required >
       </label>
     </div>
     <!--  End Contact / Personal Info  -->
 
 
     <!--  Start Preferences  -->
-    <div class="row">
-      <div class="preferences form-group col-sm-4"> <!--  shirt size  -->
+    <div class="row "> <!-- Row Start -->
+
+      <div class="preferences form-group col-sm-2"> <!--  shirt size  -->
         <label for="shirt">
-          T-shirt Size<select class="form-control" id="shirt" required>
+          T-shirt Size<select name="shirt size" class="form-control" id="shirt" required>
           <option>Small</option>
           <option>Medium</option>
           <option>Large</option>
         </select>
         </label>
         </div>
-      <div class="preferences form-group col-sm-4"> <!--  email updates option  -->
+
+      <div class="preferences form-group col-sm-2"> <!--  email updates option  -->
         <label for="updates-yes">
           Yes <input type="radio" id="updates-yes" name="email-updates" class="form-control" checked required>
         </label>
@@ -50,15 +58,17 @@
         </label>
       </div>
 
-      <div class="preferences form-group col-sm-4"> <!--  special requirements  -->
+    </div> <!-- Row End -->
+
+      <div class="preferences form-group"> <!--  special requirements  -->
         <label for="special requirements">
-          <textarea id="special requirements">Enter any special requests here</textarea>
+          <textarea name="special requirements" class="mr-5" rows="7" cols="70" id="special requirements" placeholder="Enter any special requests here"></textarea>
           </label>
       </div>
       <!--    -->
-    </div>
+
     <!--  End Preferences  -->
-  <input type="submit">
+  <input type="submit" value="Submit">
   </form>
 </div>
 <!--  End Form  -->
