--- a/Week 3 - Forms, Fonts, Colors, & Bootstrap/Student Feedback/student-feedback.html
+++ b/Week 3 - Forms, Fonts, Colors, & Bootstrap/Student Feedback/student-feedback.html
@@ -56,7 +56,7 @@
             </div>
             <input class="btn btn-outline-primary mt-4" name="submit" type="submit">
             <!--   Note that any number of classes can be added, just separate them by a space **inside** a single
-             <link rel=stylesheetclass attribute.    -->
+              attribute.    -->
 
         </div>
       </div>
