Week 5 Tree order form - minor changes to TODO statuses.
Array and Objects Practice - Having issues with looping over object.

--- a/Week 5 - JavaScript & JSON/Lab/Tree Order Form.html
+++ b/Week 5 - JavaScript & JSON/Lab/Tree Order Form.html
@@ -57,7 +57,7 @@
 <h2>Order Summary</h2>
 
 <p id="order-summary">
-    <!-- TODO Use JavaScript to display the order information,
+    <!-- ♥ Use JavaScript to display the order information,
           only if all the required information is entered  -->
 </p>
 
@@ -159,12 +159,12 @@
         // Add one error message for each problem with the form.
 
 
-        // TODO - If there are any errors after checking all of the input elements,
+        // ♥ - If there are any errors after checking all of the input elements,
         // display an alert with all of the error messages. (Hint: use join)
         // and then return from this function to prevent further processing
 
 
-        // TODO - If there are no errors, use a template string to display an order
+        // ♥ - If there are no errors, use a template string to display an order
         // summary in the order summary paragraph.
 
 
