--- a/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
+++ b/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script async defer Content-Type="text/javascript" src="expenses_chart.js"></script>
+    <script async defer content="text/javascript" src="expenses_chart.js"></script>
 
 
 
