Week 6 - Expenses complete

--- a/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
+++ b/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script async defer content="text/javascript" src="expenses_chart.js"></script>
+    <script async defer content="text/javascript" src="expenses.js"></script>
 
 
 
@@ -13,7 +13,7 @@
 
 <h1 class="text-center">Build a chart of your monthly expenses</h1>
 
-<canvas id="expenses-doughnut-chart"></canvas>
+<canvas style="height: 100px; width: 100px" id="expenses-doughnut-chart"></canvas>
 
 <div class="form-group row">
     <label class="form-label">Expense Type</label>
