Week 6 - Lab Bridge-Map section nearly complete. Why the icon issue??
Various Edits to hello_canvas.html, expenses directory, maps directory.

--- a/Week 6 - JS Libraries/Lab/Bridges/bridge-map.html
+++ b/Week 6 - JS Libraries/Lab/Bridges/bridge-map.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Bridge Map</title>
-
-
+    <!-- Leaflet script and CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-
-
+    <!-- My script and CSS link -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script async defer src="bridge-map.js"></script>
 
 </head>
 <body>
+<div id="bridge_map"></div>     <!-- Using div rather than canvas messed me up for a while.  -->
 
 </body>
 </html>
