--- a/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
+++ b/Week 6 - JS Libraries/Vids/chart/expenses/expenses.html
@@ -4,8 +4,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script async defer content="text/javascript" src="expenses.js"></script>
 
-
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
@@ -13,7 +11,7 @@
 
 <h1 class="text-center">Build a chart of your monthly expenses</h1>
 
-<canvas style="height: 100px; width: 100px" id="expenses-doughnut-chart"></canvas>
+<canvas id="expenses-doughnut-chart" height="100" width="100"></canvas>
 
 <div class="form-group row">
     <label class="form-label">Expense Type</label>
