Week 6 - Lab Complete!

--- a/Week 6 - JS Libraries/Lab/Bridges/bridge-map.html
+++ b/Week 6 - JS Libraries/Lab/Bridges/bridge-map.html
@@ -14,18 +14,20 @@
     <!-- Bar Chart script and CSS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script async defer content="text/javascript" src="bridge-map.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
     <!-- My script and CSS link -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <script async defer src="bridge-map.js"></script>
 
-
-
 </head>
 <body>
+
 <div id="bridge_map"></div>     <!-- Using div rather than canvas messed me up for a while.  -->
 
-<canvas id="chart"></canvas>
+<div class="chart-container" style="height:250px; width:500px; border: red dashed;"> <!-- Use div container to enable specific sizing -->
+    <canvas id="chart"></canvas>
+</div>
+
 </body>
 </html>
